# robocup_project

./: readme.md
grab_capabilities/: CMakeLists.txt  package.xml
grab_capabilities/include/: detection.h  grabber.h
grab_capabilities/src/: detection.cpp  grabber.cpp  grabber_node.cpp  move_object.cpp  move_object.h  move_object_node_grasp_only.cpp
jh_simulation/: CMakeLists.txt  package.xml
jh_simulation/config/: tiago.rviz  wrs2020.tar.xz
jh_simulation/config/wrs2020/: map.pgm
jh_simulation/launch/: pal_gazebo.launch  start_simulation.launch  tiago.launch  tiago_gazebo.launch  tiago_mapping.launch
jh_simulation/models/door/: door.sdf  model.config
jh_simulation/worlds/: table.world  table_12ob.world  table_5ob.world  table_8ob.world  table_banana.world  table_bowl.world  table_clu.world  table_cluttered.world  table_diff.world  table_pear.world  wrs2020.world  wrs2020_su.world
jh_state_machine/: CMakeLists.txt  package.xml
jh_state_machine/launch/: start_project.launch
jh_state_machine/src/: execute_grasp.py  gripper_setup.py  identify_object.py  init_state.py  put_object_in_bin.py  state_machine.py  test.py  tmp_state.py  turn_head_down.py
object_detection/: CMakeLists.txt  package.xml
object_detection/launch/: object_detection.launch
object_detection/src/: image_channel_converter_node.cpp
